[gd_scene load_steps=118 format=2]

[ext_resource path="res://content/sounds/monster/walker/DomePunch02_05.wav" type="AudioStream" id=1]
[ext_resource path="res://content/monster/Beast/Beast.gd" type="Script" id=2]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_02.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_02.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/beast/Beast_hit_02.wav" type="AudioStream" id=5]
[ext_resource path="res://content/monster/Beast/sheet.png" type="Texture" id=6]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_07.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_01.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_03.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_04.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_04.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_01.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_05.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_03.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_06.wav" type="AudioStream" id=15]
[ext_resource path="res://content/sounds/monster/beast/Beast_hit_03.wav" type="AudioStream" id=16]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=17]
[ext_resource path="res://content/sounds/monster/walker/WalkerDeath.wav" type="AudioStream" id=18]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=19]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=20]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=21]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=22]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=23]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=24]
[ext_resource path="res://content/sounds/monster/beast/Beast_hit_01.wav" type="AudioStream" id=25]
[ext_resource path="res://content/sounds/monster/beast/Beast_roar_03.wav" type="AudioStream" id=26]
[ext_resource path="res://content/sounds/monster/beast/Beast_roar_01.wav" type="AudioStream" id=27]
[ext_resource path="res://content/sounds/monster/beast/Beast_roar_02.wav" type="AudioStream" id=28]
[ext_resource path="res://content/sounds/monster/beast/Beast_jump_01.wav" type="AudioStream" id=29]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=30]
[ext_resource path="res://content/sounds/monster/beast/Beast_jump_02.wav" type="AudioStream" id=31]
[ext_resource path="res://content/sounds/monster/beast/Beast_jump_03.wav" type="AudioStream" id=32]
[ext_resource path="res://content/sounds/monster/beast/LandLand.wav" type="AudioStream" id=33]
[ext_resource path="res://content/sounds/monster/shifter/Drum_09.wav" type="AudioStream" id=34]
[ext_resource path="res://content/sounds/monster/beast/Beast_Death_01.wav" type="AudioStream" id=35]

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 6 )
region = Rect2( 0, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 6 )
region = Rect2( 75, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 6 )
region = Rect2( 150, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 6 )
region = Rect2( 225, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 6 )
region = Rect2( 300, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 6 )
region = Rect2( 375, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 6 )
region = Rect2( 450, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 6 )
region = Rect2( 525, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 6 )
region = Rect2( 600, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 6 )
region = Rect2( 675, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 6 )
region = Rect2( 750, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 6 )
region = Rect2( 825, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 6 )
region = Rect2( 900, 177, 75, 59 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 6 )
region = Rect2( 75, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 6 )
region = Rect2( 225, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 6 )
region = Rect2( 375, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 6 )
region = Rect2( 525, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 75, 59 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 6 )
region = Rect2( 0, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 6 )
region = Rect2( 75, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 6 )
region = Rect2( 150, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 6 )
region = Rect2( 225, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 6 )
region = Rect2( 300, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 6 )
region = Rect2( 375, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 6 )
region = Rect2( 450, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 6 )
region = Rect2( 525, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 6 )
region = Rect2( 600, 295, 75, 59 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 6 )
region = Rect2( 0, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 6 )
region = Rect2( 75, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 6 )
region = Rect2( 150, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 6 )
region = Rect2( 225, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 6 )
region = Rect2( 300, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 6 )
region = Rect2( 375, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 6 )
region = Rect2( 450, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 6 )
region = Rect2( 525, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 6 )
region = Rect2( 600, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 6 )
region = Rect2( 675, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 6 )
region = Rect2( 750, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 6 )
region = Rect2( 825, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 6 )
region = Rect2( 900, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 6 )
region = Rect2( 975, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 6 )
region = Rect2( 1050, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 6 )
region = Rect2( 1125, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 6 )
region = Rect2( 1200, 118, 75, 59 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 6 )
region = Rect2( 0, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 6 )
region = Rect2( 75, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 6 )
region = Rect2( 150, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=187]
atlas = ExtResource( 6 )
region = Rect2( 225, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=188]
atlas = ExtResource( 6 )
region = Rect2( 300, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=189]
atlas = ExtResource( 6 )
region = Rect2( 375, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=190]
atlas = ExtResource( 6 )
region = Rect2( 450, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=191]
atlas = ExtResource( 6 )
region = Rect2( 525, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 6 )
region = Rect2( 600, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=193]
atlas = ExtResource( 6 )
region = Rect2( 675, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=194]
atlas = ExtResource( 6 )
region = Rect2( 750, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=195]
atlas = ExtResource( 6 )
region = Rect2( 825, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 6 )
region = Rect2( 900, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 6 )
region = Rect2( 975, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=198]
atlas = ExtResource( 6 )
region = Rect2( 1050, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=199]
atlas = ExtResource( 6 )
region = Rect2( 1125, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=200]
atlas = ExtResource( 6 )
region = Rect2( 1200, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=201]
atlas = ExtResource( 6 )
region = Rect2( 1275, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=202]
atlas = ExtResource( 6 )
region = Rect2( 1350, 59, 75, 59 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 6 )
region = Rect2( 0, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 6 )
region = Rect2( 75, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 6 )
region = Rect2( 0, 236, 75, 59 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 6 )
region = Rect2( 75, 236, 75, 59 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 6 )
region = Rect2( 150, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 6 )
region = Rect2( 225, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 6 )
region = Rect2( 300, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 6 )
region = Rect2( 375, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 6 )
region = Rect2( 450, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 6 )
region = Rect2( 525, 354, 75, 59 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 6 )
region = Rect2( 600, 354, 75, 59 )

[sub_resource type="SpriteFrames" id=182]
animations = [ {
"frames": [ SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ) ],
"loop": false,
"name": "die_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 184 ), SubResource( 185 ), SubResource( 186 ), SubResource( 187 ), SubResource( 188 ), SubResource( 189 ), SubResource( 190 ), SubResource( 191 ), SubResource( 192 ), SubResource( 193 ), SubResource( 194 ), SubResource( 195 ), SubResource( 196 ), SubResource( 197 ), SubResource( 198 ), SubResource( 199 ), SubResource( 200 ), SubResource( 201 ), SubResource( 202 ) ],
"loop": false,
"name": "threaten",
"speed": 10.0
}, {
"frames": [ SubResource( 108 ), SubResource( 109 ) ],
"loop": true,
"name": "hit_run",
"speed": 10.0
}, {
"frames": [ SubResource( 110 ), SubResource( 111 ) ],
"loop": true,
"name": "hit_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ) ],
"loop": false,
"name": "die_run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=34]
radius = 14.0
height = 2.0

[sub_resource type="CircleShape2D" id=183]
radius = 12.0416

[sub_resource type="CircleShape2D" id=107]
radius = 5.38516

[node name="Beast" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 2 )
techId = "beast"

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 30 )
position = Vector2( 1, -25 )
frames = SubResource( 182 )
animation = "attack"
frame = 12

[node name="HitboxDefault" type="CollisionShape2D" parent="."]
position = Vector2( -6, -15 )
shape = SubResource( 34 )
disabled = true

[node name="HitboxAttack" type="CollisionShape2D" parent="."]
position = Vector2( 8, -24 )
shape = SubResource( 183 )
disabled = true

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 6, -14 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="HitPosition" type="Position2D" parent="."]
position = Vector2( 13, -14 )

[node name="DieSound" parent="." instance=ExtResource( 17 )]
bus = "World"
randomVolume = 1.0
randomPitch = 0.2
streams = [ ExtResource( 34 ) ]

[node name="DieSound2" parent="DieSound" instance=ExtResource( 17 )]
bus = "World"
randomVolume = 1.0
randomPitch = 0.2
streams = [ ExtResource( 35 ) ]

[node name="ThreatenSound" parent="." instance=ExtResource( 17 )]
stream = ExtResource( 18 )
volume_db = -4.37
pitch_scale = 0.8
bus = "World"
randomVolume = 0.8
randomPitch = 0.2
streams = [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 26 ) ]

[node name="PunchSound1" parent="." instance=ExtResource( 17 )]
volume_db = -6.903
pitch_scale = 0.94
bus = "World"
streams = [ ExtResource( 25 ), ExtResource( 5 ), ExtResource( 16 ) ]

[node name="PunchSound2" parent="." instance=ExtResource( 17 )]
volume_db = 2.301
pitch_scale = 0.82
bus = "World"
streams = [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 15 ), ExtResource( 7 ) ]

[node name="StunSound" parent="." instance=ExtResource( 17 )]
stream = ExtResource( 19 )
volume_db = 1.958
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 21 ) ]

[node name="PunchSound3" parent="." instance=ExtResource( 17 )]
volume_db = -2.761
pitch_scale = 0.76
bus = "World"
streams = [ ExtResource( 12 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 13 ) ]

[node name="JumpSound" parent="." instance=ExtResource( 17 )]
volume_db = -6.46
pitch_scale = 0.98
bus = "World"
randomVolume = 1.2
randomPitch = 0.18
streams = [ ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ) ]

[node name="LandSound" parent="JumpSound" instance=ExtResource( 17 )]
volume_db = -2.848
bus = "World"
randomVolume = 1.2
randomPitch = 0.0
streams = [ ExtResource( 33 ) ]

[node name="StepCollisions" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepCollisions"]
position = Vector2( -7, 0 )
shape = SubResource( 107 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
